@@ -1,3 +1,8 @@
+Wed Nov 02 2005 Paul Chitescu <paulc-devel@null.ro>
+- TOS setting support and configuration improvments in RTP
+- Fixed time parsing of messages from external modules
+- Abnormal CDR timestamps are adjusted to avoid negative time intervals
+
 Sun Oct 30 2005 Paul Chitescu <paulc-devel@null.ro>
 - Fixed H.323, IAX and ISDN to include outgoing caller and called in CDR
 - The CDR builder emits time and intervals in milliseconds
